[gd_scene load_steps=68 format=3 uid="uid://byyyexo4e4kop"]

[ext_resource type="Texture2D" uid="uid://0asjwwjlao3i" path="res://assets/brackey/sprites/knight.png" id="1_10x2q"]
[ext_resource type="Script" uid="uid://bdy8blwppg202" path="res://scripts/player_platformer.gd" id="1_e5rie"]
[ext_resource type="AudioStream" uid="uid://bap4rn64gfbvt" path="res://assets/sounds/injury-scream-86808.mp3" id="3_ekqba"]
[ext_resource type="Texture2D" uid="uid://ddumm5c1xx7bm" path="res://assets/brackey/sprites/knight_divine_armor.png" id="3_xvq54"]
[ext_resource type="AudioStream" uid="uid://cg26oer33s2at" path="res://assets/sounds/man-death-scream-186763.mp3" id="4_moqhw"]
[ext_resource type="Texture2D" uid="uid://c6vtwhcumvm7f" path="res://assets/sprites/duck/Idle/Idle 002.png" id="4_ufwgd"]
[ext_resource type="Texture2D" uid="uid://0d8u6e7j7g4j" path="res://assets/sprites/duck/Idle/Idle 001.png" id="5_uwvpj"]
[ext_resource type="PackedScene" uid="uid://gra5myrijv4y" path="res://scenes/damage/damage_receiver_component.tscn" id="5_vsirv"]
[ext_resource type="Texture2D" uid="uid://bgob888kl4rmw" path="res://assets/sprites/duck/Jumping/Jumping 001.png" id="6_asghg"]
[ext_resource type="Texture2D" uid="uid://b6gftkn6mdbya" path="res://assets/sprites/blood_drop.png" id="6_u6mks"]
[ext_resource type="Texture2D" uid="uid://d3xx71vd0xfn5" path="res://assets/sprites/duck/Walking-Running/Running 002.png" id="7_iwc6w"]
[ext_resource type="Texture2D" uid="uid://cd72lxp0lwo8j" path="res://assets/sprites/duck/Walking-Running/Running 001.png" id="8_gponm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e5rie"]
atlas = ExtResource("1_10x2q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekqba"]
atlas = ExtResource("1_10x2q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_moqhw"]
atlas = ExtResource("1_10x2q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsirv"]
atlas = ExtResource("1_10x2q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ph42"]
atlas = ExtResource("3_xvq54")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_somgn"]
atlas = ExtResource("3_xvq54")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7wed"]
atlas = ExtResource("3_xvq54")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n65wl"]
atlas = ExtResource("3_xvq54")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6mks"]
atlas = ExtResource("1_10x2q")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqdnt"]
atlas = ExtResource("3_xvq54")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2f70"]
atlas = ExtResource("1_10x2q")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h60gl"]
atlas = ExtResource("1_10x2q")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gb8q"]
atlas = ExtResource("1_10x2q")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8orm0"]
atlas = ExtResource("1_10x2q")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4do0"]
atlas = ExtResource("1_10x2q")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvq54"]
atlas = ExtResource("1_10x2q")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufwgd"]
atlas = ExtResource("1_10x2q")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwvpj"]
atlas = ExtResource("1_10x2q")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asghg"]
atlas = ExtResource("1_10x2q")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwc6w"]
atlas = ExtResource("1_10x2q")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gponm"]
atlas = ExtResource("1_10x2q")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjdv2"]
atlas = ExtResource("1_10x2q")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyeh1"]
atlas = ExtResource("1_10x2q")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mogm"]
atlas = ExtResource("1_10x2q")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khade"]
atlas = ExtResource("1_10x2q")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw7r7"]
atlas = ExtResource("1_10x2q")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l6bh"]
atlas = ExtResource("3_xvq54")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uhuu"]
atlas = ExtResource("3_xvq54")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rwvd"]
atlas = ExtResource("3_xvq54")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1o8f"]
atlas = ExtResource("3_xvq54")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7fc0"]
atlas = ExtResource("3_xvq54")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeb4a"]
atlas = ExtResource("3_xvq54")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rntbb"]
atlas = ExtResource("3_xvq54")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iokhs"]
atlas = ExtResource("3_xvq54")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyasl"]
atlas = ExtResource("3_xvq54")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asvl3"]
atlas = ExtResource("3_xvq54")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuog3"]
atlas = ExtResource("3_xvq54")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8avg2"]
atlas = ExtResource("3_xvq54")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd45k"]
atlas = ExtResource("3_xvq54")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhewo"]
atlas = ExtResource("3_xvq54")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyqxo"]
atlas = ExtResource("3_xvq54")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2y36"]
atlas = ExtResource("3_xvq54")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6mks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5rie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekqba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsirv")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ph42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_somgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7wed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n65wl")
}],
"loop": true,
"name": &"idle_divine",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ufwgd")
}, {
"duration": 1.0,
"texture": ExtResource("5_uwvpj")
}],
"loop": true,
"name": &"idle_duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6mks")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqdnt")
}],
"loop": true,
"name": &"jump_divine",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_asghg")
}],
"loop": true,
"name": &"jump_duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2f70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h60gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gb8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8orm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4do0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvq54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufwgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwvpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asghg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwc6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gponm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjdv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyeh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mogm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khade")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw7r7")
}],
"loop": true,
"name": &"run",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l6bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uhuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rwvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1o8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7fc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeb4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rntbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iokhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyasl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asvl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuog3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8avg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd45k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhewo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyqxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2y36")
}],
"loop": true,
"name": &"run_divine_armor",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_iwc6w")
}, {
"duration": 1.0,
"texture": ExtResource("8_gponm")
}],
"loop": true,
"name": &"run_duck",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_ekqba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e5rie"]
resource_name = "injured"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.633333, 1, 1.3, 1.66667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0.839216), Color(1, 1, 1, 0.235294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.219608), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_moqhw"]
_data = {
&"RESET": SubResource("Animation_ekqba"),
&"injured": SubResource("Animation_e5rie")
}

[sub_resource type="Animation" id="Animation_vsirv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_moqhw"]
resource_name = "enter_vortex"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6mks"]
_data = {
&"RESET": SubResource("Animation_vsirv"),
&"enter_vortex": SubResource("Animation_moqhw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10x2q"]
radius = 5.0
height = 16.0

[sub_resource type="Curve" id="Curve_u6mks"]
_data = [Vector2(0, 0.370787), 0.0, 0.0, 0, 0, Vector2(0.461883, 0.337079), 0.0, 0.0, 0, 0, Vector2(1, 0.134832), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_r2f70"]
width = 32
curve = SubResource("Curve_u6mks")

[sub_resource type="Curve" id="Curve_r2f70"]
_limits = [0.539326, 0.977528, 0.0, 1.0]
_data = [Vector2(0, 0.819972), 0.0, 0.0, 0, 0, Vector2(1, 0.539326), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h60gl"]
width = 32
curve = SubResource("Curve_r2f70")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1gb8q"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
spread = 152.143
initial_velocity_min = 50.0
initial_velocity_max = 55.56
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_r2f70")
scale_over_velocity_curve = SubResource("CurveTexture_h60gl")
hue_variation_min = -0.08
hue_variation_max = 0.18
anim_offset_max = 0.0367
turbulence_enabled = true

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 5
collision_layer = 2
script = ExtResource("1_e5rie")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_u6mks")
animation = &"jump_divine"
autoplay = "idle"

[node name="InjuredAnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_moqhw")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_u6mks")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_10x2q")

[node name="InjuryAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ekqba")

[node name="DyingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_moqhw")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="DamageReceiverComponent" parent="." instance=ExtResource("5_vsirv")]
position = Vector2(-8, -18)
current_life_counter = 30.0

[node name="BloodParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 17
texture = ExtResource("6_u6mks")
one_shot = true
preprocess = 0.15
speed_scale = 1.45
explosiveness = 0.61
trail_lifetime = 8.52
trail_sections = 19
trail_section_subdivisions = 19
process_material = SubResource("ParticleProcessMaterial_1gb8q")
